Initial base UI just for input section, with dummy BE components
